tests/negative/typecheck/args-named-not.orng
fn main() -> Int
    let x: (Int, Int) = (a = 4, b = 4)
    0